pushing to prod

--- a/package.json
+++ b/package.json
@@ -3,15 +3,19 @@
   "version": "0.0.1",
   "private": true,
   "scripts": {
-    "dev": "next dev --turbopack",
+    "dev": "next dev",
     "build": "next build",
     "start": "next start",
     "lint": "eslint --fix"
   },
   "dependencies": {
     "@auth/drizzle-adapter": "^1.9.1",
+    "@ffmpeg/ffmpeg": "^0.12.15",
+    "@ffmpeg/util": "^0.12.2",
+    "@heroui/accordion": "^2.2.16",
     "@heroui/button": "2.2.19",
     "@heroui/code": "2.2.14",
+    "@heroui/image": "^2.2.12",
     "@heroui/input": "2.4.19",
     "@heroui/kbd": "2.2.15",
     "@heroui/link": "2.2.16",
@@ -20,6 +24,7 @@
     "@heroui/snippet": "2.2.20",
     "@heroui/switch": "2.2.17",
     "@heroui/system": "2.4.15",
+    "@heroui/tabs": "^2.2.16",
     "@heroui/theme": "2.4.15",
     "@neondatabase/serverless": "^1.0.0",
     "@react-aria/ssr": "3.9.8",
@@ -34,7 +39,8 @@
     "next-auth": "^4.24.11",
     "next-themes": "0.4.6",
     "react": "18.3.1",
-    "react-dom": "18.3.1"
+    "react-dom": "18.3.1",
+    "react-player": "^2.16.0"
   },
   "devDependencies": {
     "@eslint/compat": "1.2.8",
