--- a/package.json
+++ b/package.json
@@ -10,12 +10,13 @@
   },
   "dependencies": {
     "@auth/drizzle-adapter": "^1.9.1",
-    "@google-cloud/storage": "^7.16.0",
     "@ffmpeg/ffmpeg": "^0.12.15",
     "@ffmpeg/util": "^0.12.2",
+    "@google-cloud/storage": "^7.16.0",
     "@heroui/accordion": "^2.2.16",
     "@heroui/button": "2.2.19",
     "@heroui/code": "2.2.14",
+    "@heroui/form": "^2.1.18",
     "@heroui/image": "^2.2.12",
     "@heroui/input": "2.4.19",
     "@heroui/kbd": "2.2.15",
