--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@google-cloud/storage": "^7.16.0",
     "@heroui/accordion": "^2.2.16",
     "@heroui/button": "2.2.19",
+    "@heroui/card": "^2.2.18",
     "@heroui/code": "2.2.14",
     "@heroui/form": "^2.1.18",
     "@heroui/image": "^2.2.12",
@@ -32,10 +33,13 @@
     "@neondatabase/serverless": "^1.0.0",
     "@react-aria/ssr": "3.9.8",
     "@react-aria/visually-hidden": "3.8.22",
+    "@remotion/player": "^4.0.305",
     "axios": "^1.9.0",
     "clsx": "2.1.1",
     "dotenv": "^16.5.0",
     "drizzle-orm": "^0.43.1",
+    "ffmpeg-static": "^5.2.0",
+    "fluent-ffmpeg": "^2.1.3",
     "framer-motion": "11.13.1",
     "intl-messageformat": "10.7.16",
     "lucide-react": "^0.510.0",
@@ -44,7 +48,8 @@
     "next-themes": "0.4.6",
     "react": "18.3.1",
     "react-dom": "18.3.1",
-    "react-player": "^2.16.0"
+    "react-player": "^2.16.0",
+    "remotion": "^4.0.305"
   },
   "devDependencies": {
     "@eslint/compat": "1.2.8",
@@ -52,6 +57,7 @@
     "@eslint/js": "9.25.1",
     "@next/eslint-plugin-next": "15.3.1",
     "@react-types/shared": "3.29.0",
+    "@types/fluent-ffmpeg": "^2.1.27",
     "@types/node": "22.15.3",
     "@types/react": "18.3.3",
     "@types/react-dom": "18.3.0",
